# NewByte-UI-Lib

./: .gitignore  CMakeLists.txt  README.md
src/: CaptionButtons.cpp  CaptionButtons.hpp  ChildWindow.cpp  ChildWindow.hpp  Core.hpp  DoceTree.cpp  DoceTree.hpp  DockManager.cpp  DockManager.hpp  DockTree.cpp  DockTree.hpp  IIndexable.cpp  IIndexable.hpp  IWindow.cpp  IWindow.hpp  Layout.cpp  Layout.hpp  LayoutBuilder.cpp  LayoutBuilder.hpp  MainWindow.hpp  Signal.hpp  SubscribtionManager.cpp  SubscribtionManager.hpp  TempDocking.hpp  Utils.cpp  Utils.hpp  main.cpp
src/Core/: ZIndex.cpp  ZIndex.hpp
src/Layout/: LayoutNode.cpp  LayoutNode.hpp
src/Localization/: Formatter.cpp  Formatter.hpp  Locale.cpp  Locale.hpp  LocaleLoader.cpp  LocaleLoader.hpp  LocaleManager.cpp  LocaleManager.hpp  LocalizableText.cpp  LocalizableText.hpp  PluralEngine.cpp  PluralEngine.hpp  Translation.cpp  Translation.hpp
src/Localization/Calendars/: CalendarDate.cpp  CalendarDate.hpp  EthiopicCalendar.cpp  EthiopicCalendar.hpp  GregorianCalendar.cpp  GregorianCalendar.hpp  HebrewCalendar.cpp  HebrewCalendar.hpp  HijriCalendar.cpp  HijriCalendar.hpp  ICalendar.cpp  ICalendar.hpp  JulianCalendar.cpp  JulianCalendar.hpp  PersianCalendar.cpp  PersianCalendar.hpp
src/NewRenderer/: Direct2dFactory.cpp  Direct2dFactory.hpp  Direct2dRenderContext.cpp  Direct2dRenderContext.hpp  Direct2dResourceManager.cpp  Direct2dResourceManager.hpp  Direct2dWindowRenderer.cpp  Direct2dWindowRenderer.hpp
src/Renderer/: Direct2dCaptionButtonRenderer.cpp  Direct2dCaptionButtonRenderer.hpp  Direct2dFont.cpp  Direct2dFont.hpp  Direct2dGlobalWidgetMapper.cpp  Direct2dGlobalWidgetMapper.hpp  Direct2dRenderer.cpp  Direct2dRenderer.hpp  Direct2dWidgetRenderer.cpp  Direct2dWidgetRenderer.hpp  Direct2dWrapper.cpp  Direct2dWrapper.hpp  FactorySingleton.cpp  FactorySingleton.hpp  Font.cpp  Font.hpp  GeometryFactory.cpp  GeometryFactory.hpp  Renderer.cpp  Renderer.hpp
src/Renderer/Geometry/: BorderGeometryBuilder.cpp  BorderGeometryBuilder.hpp  BorderGeometryCache.cpp  BorderGeometryCache.hpp  GeometryFactory.cpp  GeometryFactory.hpp  WidgetsGeometryBuilder.cpp  WidgetsGeometryBuilder.hpp  WidgetsGeometryCache.cpp  WidgetsGeometryCache.hpp
src/RendererInterface/: IRenderContext.cpp  IRenderContext.hpp  IResourceManager.cpp  IResourceManager.hpp  RenderTypes.hpp
src/Utils/: Validator.cpp  Validator.hpp
src/Utils/Windows/: WindowPositionQueue.cpp  WindowPositionQueue.hpp
src/Widgets/: Button.cpp  Button.hpp  Calendar.cpp  Calendar.hpp  CheckBox.cpp  CheckBox.hpp  ComboBox.cpp  ComboBox.hpp  ILayoutable.hpp  IPopUp.hpp  IWidget.cpp  IWidget.hpp  IWidgetRenderer.hpp  Indentations.cpp  Indentations.hpp  Label.cpp  Label.hpp  Section.hpp  SideBar.hpp  Spacer.cpp  Spacer.hpp  SpinBox.cpp  SpinBox.hpp  TextEdit.cpp  TextEdit.hpp  Theme.cpp  Theme.hpp  TreeView.cpp  TreeView.hpp  WidgetSizePolicy.hpp  WidgetStyle.hpp
src/Win32Window/: Win32ChildWindow.cpp  Win32ChildWindow.hpp  Win32EventLoop.cpp  Win32EventLoop.hpp  Win32Global.hpp  Win32ModalWindow.cpp  Win32ModalWindow.hpp  Win32Window.cpp  Win32Window.hpp
src/WindowInterface/: IEventLoop.cpp  IEventLoop.hpp  IPlatformMessage.hpp  IWindow.cpp  IWindow.hpp  IWindowRenderer.cpp  IWindowRenderer.hpp  WindowCore.hpp  WindowMapper.hpp  WindowState.cpp  WindowState.hpp  WindowStyle.cpp  WindowStyle.hpp
